# azure-functions-validation-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Makefile  PRD.md  PROCESS_IMPROVEMENT.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  cliff.toml  codecov.yml  debug_test.py  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-test.yml  codeql.yml  create-release.yml  docs.yml  e2e-azure.yml  maintenance.yml  performance.yml  publish-pypi.yml  release.yml  sbom.yml  security.yml  stale.yml  worker-nightly.yml
agent-playbook/: index.html
api/: index.html
architecture/: index.html
changelog/: index.html
choose-a-plan/: index.html
configuration/: index.html
contributing/: index.html
demo/: Dockerfile.vhs  README.md  preview.py  render_validation_output.py  validation-demo.tape
deployment/: index.html
development/: index.html
docs/: PRD.md  TDD.md  agent-playbook.md  api.md  architecture.md  changelog.md  choose-a-plan.md  configuration.md  contributing.md  deployment.md  development.md  faq.md  getting-started.md  index.md  installation.md  llms.txt  release_process.md  security.md  testing.md  troubleshooting.md  usage.md
docs/examples/: async_validation.md  basic_validation.md  crud_api.md  custom_error_handler.md  openapi_aligned_validation.md  query_validation.md
docs/specs/: PRD.md  TDD.md
examples/: README.md  __init__.py
examples/async_validation/: README.md  function_app.py  index.html  requirements.txt
examples/basic_validation/: index.html
examples/crud_api/: README.md  __init__.py  function_app.py  index.html  requirements.txt
examples/custom_error_handler/: README.md  __init__.py  function_app.py  index.html
examples/e2e_app/: .funcignore  README.md  function_app.py  requirements.txt
examples/hello_validation/: README.md  __init__.py  function_app.py  requirements.txt
examples/openapi_aligned_validation/: README.md  __init__.py  function_app.py
examples/profile_validation/: README.md  function_app.py
examples/query_validation/: index.html
faq/: index.html
getting-started/: index.html
infra/: main.bicep
installation/: index.html
javascripts/: mermaid-init.js
release_process/: index.html
search/: search_index.json
security/: index.html
src/azure_functions_validation/: __init__.py  _adapter.py  _decorator.py  _exceptions.py  _metadata.py  _metadata_helpers.py  adapter.py  contract.py  decorator.py  errors.py  exceptions.py  metadata.py  openapi.py  pipeline.py  registry.py
testing/: index.html
tests/: conftest.py  test_adapter.py  test_contract.py  test_decorator.py  test_errors.py  test_examples.py  test_exceptions.py  test_integration.py  test_metadata.py  test_metadata_contract.py  test_openapi.py  test_openapi_helpers.py  test_pipeline.py  test_public_api.py  test_registry.py  test_toolkit_metadata.py  test_validation_metadata.py
tests/_test_app/: __init__.py  function_app.py  local.settings.json
tests/e2e/: __init__.py  test_validation_e2e.py
troubleshooting/: index.html
usage/: index.html
